# genaikeys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  tox.ini  worksheet.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-publish.yml
docs/: _config.yml  cli.md  configuration.md  custom-backends.md  index.md  logging.md
examples/: with_aws.py  with_azure.py  with_gcp.py
genaikeys/: __init__.py  _aws_secret_manager.py  _azure_keyvault.py  _gcp_secret_manager.py  _logging.py  _secret_manager_default.py  _settings.py  cache.py  cli.py  keeper.py  types.py
genaikeys/backends/: __init__.py  aws.py  azure.py  gcp.py
genaikeys/plugins/: __init__.py  base.py  registry.py
genaikeys/settings/: __init__.py  aws.py  azure.py  gcp.py
tests/: conftest.py  helpers.py  test_async.py  test_backends.py  test_cache.py  test_cli.py  test_e2e.py  test_factories.py  test_genaikeys.py  test_logging.py  test_plugin.py  test_secret_keeper.py  test_settings.py
