[tool.poetry]
name = "genaikeys"
version = "0.1.0"
description = "A convenient secret retrieval proxy backed by cloud scale secret vaults"
authors = ["Ndamulelo Nemakhavhani <ndamulelo@rihonegroup.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "genaikeys", from = "." }]
keywords = ["secrets", "AI", "cloud", "vault", "security"]
repository = "https://github.com/ndamulelonemakh/genaikeys"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
cryptography = "^46.0.0"
azure-identity = "^1.25.0"
azure-keyvault-secrets = "^4.10.0"
pydantic-settings = "^2.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -m 'not e2e'"
markers = [
    "e2e: live tests that make real network calls (skipped by default; run with -m e2e)",
    "aws: e2e tests for the AWS Secrets Manager backend",
    "azure: e2e tests for the Azure Key Vault backend",
    "gcp: e2e tests for the GCP Secret Manager backend",
]

[tool.coverage.run]
source = ["genaikeys"]
omit = ["tests/*"]

[tool.poetry.extras]
aws = ["boto3"]
gcp = ["google-cloud-secret-manager"]
all = ["boto3", "google-cloud-secret-manager"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
